Tue Jun 13 12:59:52 2000  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: New file, updated configure.in
	* configure.in: Removed.
	* configure: Regenerated.
	* longlong.h: Import from gcc.
	* superopt.h: Fix multiline asm statements.

Tue Jun 13 12:59:52 2000  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: New file
	* configure: New file
	* goal.def: Marked a few goals as #if EXPENSIVE
	* install-sh: New file
	* Makefile: Removed
	* Makefile.in: New file
	* superopt.c [SINGLE]: Use setjmp/longjmp to bail out after
	first solution is found.
	* superopt.c: Use HAVE_SYS_RESOURCE_H instead of #if USG
	* superopt.h: Test_sequence now returns int
	* version.h.in: New file
	* version.h: New file

Sat Jun  3 01:28:17 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (random_word): Delete unused variable tot_bits.

Thu Jun  1 04:05:25 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (init_random_word): Make state1 have char type.
	Use random() on alpha, since srand48 doesn't work there.

Wed May 31 17:08:12 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (test_operands): Add -3, -2, 3, 30, 31, 32, 63, 64.
	(random_word): Return small numbers with high probability.

Sat May 27 18:32:03 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (N_RANDOM_TEST_OPERANDS): Set to 25000.
	(random_word): Rewrite.
	(RANDOM): New macro, internal to random_word.

	* goal.def (DBL_SHIFT_LO, DBL_SHIFT_LO_TRUNC): Arity is 2.

Wed May 24 07:40:49 1995  Torbjorn Granlund  <tege@phydeaux.cygnus.com>

	* superopt.c (N_RANDOM_TEST_OPERANDS): New macro.
	(init_test_sets): Use N_RANDOM_TEST_OPERANDS.
	Also, zero n_words when in declarator.
	(random_word): Conditionally complement x before loop.

	* synth.def (synth_skip): Loop over dr also for unary operations.
	* superopt.c (recurse): Delete inline declaration.

Tue May 23 01:35:16 1995  Torbjorn Granlund  <tege@rtl.cygnus.com>

	* goal.def: Add *_SEL goals.
